# c-compiler

./: .gitignore  Cargo.toml  compile.sh  grammar.md  readme.md
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  main.rs  parser.rs  parser_old.rs  tokenizer.rs
parser/src/parser/: constant.rs  declaration.rs  declaration_specifiers.rs  declarator.rs  expression.rs  init_declarator.rs  initializer.rs  mod.rs  pointer.rs  statement.rs  storage_class_specifier.rs  type_info.rs  type_qualifier.rs  type_specifier.rs
parser/src/parser/declaration/: declaration.rs  declaration_specifier.rs  declarator.rs  enum_specifier.rs  mod.rs  parameter.rs  specifier_qualifier.rs  storage_class.rs  struct_or_union_specifier.rs  type_qualifier.rs  type_specifier.rs
parser/src/parser/statement/: compound_statement.rs  mod.rs  statement.rs
src/: lexer.rs  main.rs  parser.rs
src/code_generator/: asm64.rs  ir.rs  mod.rs
