[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "parser",
]

[[bin]]
name = "compiler"
path = "src/main.rs"

[[bin]]
name = "parser"
path = "parser/src/main.rs"

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["error", "display", "from_str"] }
clap = { version = "4.5.9", features = ["derive"] }
parser = { path = "parser" }

[dev-dependencies]
rstest = "0.21.0"
